подключила шрифт, задала параметры изображений

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <title>About_smoothie</title>
 </head>
 <body>
@@ -16,8 +17,7 @@
             </ul>
         </div>
     <div>
-        <img src="./img/Group 2.svg"  
-        height: 400px;>
+        <img src="./img/Group 2.svg" width="224" height="73">
     </div>
         <div>
             <ul>
@@ -25,9 +25,8 @@
                 <li>Shop</li>
                 <li>Contact</li>
             </ul>
-            <img src="./img/Heading.svg" >
         </div>
-
+        <img src="./img/Heading.svg" width="1820" height="400">
     </header>
 </body>
 </html>
