в header сделала элементы в одну строку

--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,20 @@
 </head>
 <body>
     <header class="container">
-        <div>
-            <ul>
-                <li>Home</li>
-                <li class="about">About</li>
-                <li>Blog</li>
-            </ul>
+        <ul>
+            <li>Home</li>
+            <li class="about">About</li>
+            <li>Blog</li>
+        </ul>
+        <div class="header-element">
+            <img src="./img/Group 2.svg" width="224" height="73">
         </div>
-    <div>
-        <img src="./img/Group 2.svg" width="224" height="73">
-    </div>
-        <div>
-            <ul>
-                <li>Menu</li>
-                <li>Shop</li>
-                <li>Contact</li>
-            </ul>
-        </div>
-        <img src="./img/Heading.svg" width="1820" height="400">
+        <ul>
+            <li>Menu</li>
+            <li>Shop</li>
+            <li>Contact</li>
+        </ul>
     </header>
+    <img src="./img/Heading.svg" width="1820" height="400">
 </body>
 </html>
