добавила описание и стили к нему

--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,40 @@
     <title>About_smoothie</title>
 </head>
 <body>
-    <header class="container">
-        <ul>
+    <header class="container menu">
+        <ul class="header-element">
             <li>Home</li>
             <li class="about">About</li>
             <li>Blog</li>
         </ul>
-        <div class="header-element">
+        <div class="header-img">
             <img src="./img/Group 2.svg" width="224" height="73">
         </div>
-        <ul>
+        <ul class="header-element"> 
             <li>Menu</li>
             <li>Shop</li>
             <li>Contact</li>
         </ul>
     </header>
-    <img src="./img/Heading.svg" width="1820" height="400">
+    <div class="about-us"> 
+        <p>Some facts about our activity</p>
+    </div>
+    <div class="description">
+        <h2>Triple Berry Smoothie</h2>
+        <p>A smoothie is so much more that blended fruit. <br>
+            It's an art with all of it's different elements  <br>
+            blending perfectly together.</p> 
+        <h2>Pick Your Fruit</h2>
+        <p>We chose strawberries, blackberries,  <br>
+            raspberries, and bananas to be our base, but <br>
+            any combo of fruit is great. </p>
+        <h2>Fresh or frozen fruit? </h2>
+        <p>For smoothies, frozen fruit is best. It blends up  <br>
+            thicker than fresh and gives you a really cold <br>
+            smoothie to enjoy when done.</p>
+        <h2>Add a thickener.</h2>
+        <p>We use unsweetened greek yogurt in our smoothie, but peanut butter, almond butter, or vanilla yogurt are all great options.</p>
+
+    </div>
 </body>
 </html>
