подключила шрифт, добавила отступы в блоке "описание", добавила контент в блок со статистикой

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise&display=swap" rel="stylesheet">
     <title>About_smoothie</title>
 </head>
 <body>
@@ -26,7 +27,8 @@
     <div class="about-us"> 
         <p>Some facts about our activity</p>
     </div>
-    <div class="description">
+    <div class="description container">
+        <div class="smoothie">
         <h2>Triple Berry Smoothie</h2>
         <p>A smoothie is so much more that blended fruit. <br>
             It's an art with all of it's different elements  <br>
@@ -39,9 +41,35 @@
         <p>For smoothies, frozen fruit is best. It blends up  <br>
             thicker than fresh and gives you a really cold <br>
             smoothie to enjoy when done.</p>
-        <h2>Add a thickener.</h2>
-        <p>We use unsweetened greek yogurt in our smoothie, but peanut butter, almond butter, or vanilla yogurt are all great options.</p>
-
+        </div>
+        <div class="smoothie">
+            <img src="./img/Group 1.png" width="380" height="450">
+        </div>
+        <div class="smoothie">
+        <h2>Add a thickener</h2>
+        <p>We use unsweetened greek yogurt in our <br>
+            smoothie, but peanut butter, almond butter, or <br>
+            vanilla yogurt are all great options.</p>
+        <h2>Choose a liquid</h2>
+        <p>Almond milk is great for the added nutty flavor, <br>
+            but coconut milk pairs well with a tropical <br>
+            smoothie. </p>
+        <h2>Throw some add-ins in </h2>
+        <p>Add some spinach or kale for additional <br>
+            nutrition or flax seeds for omega-3s. Flavors like <br>
+            fresh mint, vanilla extract, cinnamon, or honey. </p>
+        </div>
+    </div>
+    <div class="statistics">
+        <span class="quantity">4832</span>
+        <div class="icon">Cherry smoothies</div>
+        <span class="quantity">2531</span>
+        <div class="icon">Apple smoothies</div>
+        <span class="quantity">1939</span>
+        <div class="icon">Ananas smoothies</div>
+        <span class="quantity">7812</span>
+        <div class="icon">Bananas smoothies</div>
+            
     </div>
 </body>
 </html>
