добавила иконки, убрала фиксированную ширину у background-img

--- a/src/index.html
+++ b/src/index.html
@@ -60,16 +60,29 @@
             fresh mint, vanilla extract, cinnamon, or honey. </p>
         </div>
     </div>
-    <div class="statistics">
-        <span class="quantity">4832</span>
-        <div class="icon">Cherry smoothies</div>
-        <span class="quantity">2531</span>
-        <div class="icon">Apple smoothies</div>
-        <span class="quantity">1939</span>
-        <div class="icon">Ananas smoothies</div>
-        <span class="quantity">7812</span>
-        <div class="icon">Bananas smoothies</div>
-            
+    <div class="statistics-image">
+        <div class="container statistics">
+            <div class="icon">
+                <img src="./img/cherry .svg" alt="cherry" width="129" height="129">
+                <span class="quantity">4832</span>
+                <span >Cherry smoothies </span>
+            </div>
+            <div class="icon">
+                <img src="./img/apple.svg" alt="apple" width="135" height="135">
+                <span class="quantity">2531</span>
+                <span>Apple smoothies</span>
+            </div>
+            <div class="icon">
+                <img src="./img/pineapple.svg" alt="pineapple" width="119" height="119">
+                <span class="quantity">1939</span>
+                <span>Ananas smoothies</span>
+            </div>
+            <div class="icon">
+                <img src="./img/banana.svg" alt="banana" width="120" height="120">
+                <span class="quantity">7812</span>
+                <span>Bananas smoothies</span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
