добавила и стилизовала заголовки для раздела team, исправила синтаксис заголовков в разметке,

--- a/src/index.html
+++ b/src/index.html
@@ -25,19 +25,20 @@
         </ul>
     </header>
     <div class="about-us"> 
-        <p>Some facts about our activity</p>
+        <h1>About us</h1>
+        <h2>Some facts about our activity</h2>
     </div>
     <div class="description container">
         <div class="smoothie">
-        <h2>Triple Berry Smoothie</h2>
+        <h3>Triple Berry Smoothie</h3>
         <p>A smoothie is so much more that blended fruit. <br>
             It's an art with all of it's different elements  <br>
             blending perfectly together.</p> 
-        <h2>Pick Your Fruit</h2>
+        <h3>Pick Your Fruit</h3>
         <p>We chose strawberries, blackberries,  <br>
             raspberries, and bananas to be our base, but <br>
             any combo of fruit is great. </p>
-        <h2>Fresh or frozen fruit? </h2>
+        <h3>Fresh or frozen fruit? </h3>
         <p>For smoothies, frozen fruit is best. It blends up  <br>
             thicker than fresh and gives you a really cold <br>
             smoothie to enjoy when done.</p>
@@ -46,15 +47,15 @@
             <img src="./img/Group 1.png" width="380" height="450">
         </div>
         <div class="smoothie">
-        <h2>Add a thickener</h2>
+        <h3>Add a thickener</h3>
         <p>We use unsweetened greek yogurt in our <br>
             smoothie, but peanut butter, almond butter, or <br>
             vanilla yogurt are all great options.</p>
-        <h2>Choose a liquid</h2>
+        <h3>Choose a liquid</h3>
         <p>Almond milk is great for the added nutty flavor, <br>
             but coconut milk pairs well with a tropical <br>
             smoothie. </p>
-        <h2>Throw some add-ins in </h2>
+        <h3>Throw some add-ins in </h3>
         <p>Add some spinach or kale for additional <br>
             nutrition or flax seeds for omega-3s. Flavors like <br>
             fresh mint, vanilla extract, cinnamon, or honey. </p>
@@ -83,6 +84,12 @@
                 <span>Bananas smoothies</span>
             </div>
         </div>
+    </div>
+    <div class="team">
+        <h4>Dream Team</h4>
+        <h5 class="subtitle">Meet our members</h5>
+        <img src="./img/member 1 .png" width="330" height="330">
+        <img src="./img/blue rectangle.png" width="380" height="380">
     </div>
 </body>
 </html>
