добавила два блока в раздел team.

--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,33 @@
     <div class="team">
         <h4>Dream Team</h4>
         <h5 class="subtitle">Meet our members</h5>
-        <img src="./img/member 1 .png" width="330" height="330">
-        <img src="./img/blue rectangle.png" width="380" height="380">
+        <div class="members">
+            <div class="member">
+                <img src="./img/member 1 .png" width="330" height="330">
+                <div>
+                    <h1>Ava Addamms</h1>
+                    <h2>Designer</h2>
+                    <p>Lorem ipsum dolor sit amet, <br>
+                    consectetur adipiscing elit. <br>
+                    Suspendisse dui ante, cons <br>
+                    non profit here.</p> 
+                    <img src="./img/socialmedia.svg">
+                </div>
+            </div>
+            <div class="member member_reversed">
+                <img src="./img/member rebecca.png">
+                <div>
+                    <h1>Rebecca Le</h1>
+                    <h2>Designer</h2>
+                    <p>Lorem ipsum dolor sit amet, <br>
+                        consectetur adipiscing elit. <br>
+                        Suspendisse dui ante, cons <br>
+                        non profit here.</p> 
+                    <img src="./img/socialmedia.svg">
+                </div>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
