добавила двух участников команды: фото,  описание. добавила футер и бэкграунд к нему начала стилизацию блоков в разделе team

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </div>
-    <div class="team">
+    <div class="team container">
         <h4>Dream Team</h4>
         <h5 class="subtitle">Meet our members</h5>
         <div class="members">
@@ -101,8 +101,20 @@
                     <img src="./img/socialmedia.svg">
                 </div>
             </div>
+            <div class="member">
+                <img src="./img/member3.png" width="330" height="330">
+                <div>
+                    <h1>Ellen Marlen</h1>
+                    <h2>Designer</h2>
+                    <p>Lorem ipsum dolor sit amet, <br>
+                        consectetur adipiscing elit. <br>
+                        Suspendisse dui ante, cons <br>
+                        non profit here.</p> 
+                    <img src="./img/socialmedia.svg">
+                </div>
+            </div>
             <div class="member member_reversed">
-                <img src="./img/member rebecca.png">
+                <img src="./img/member rebecca.png" width="330" height="330">
                 <div>
                     <h1>Rebecca Le</h1>
                     <h2>Designer</h2>
@@ -113,8 +125,24 @@
                     <img src="./img/socialmedia.svg">
                 </div>
             </div>
+            <div class="member member_reversed">
+                <img class="circle" src="./img/member4.png" width="330" height="330">
+                <div>
+                    <h1>Andy Shped</h1>
+                    <h2>Drinker</h2>
+                    <p>Lorem ipsum dolor sit amet, <br>
+                        consectetur adipiscing elit. <br>
+                        Suspendisse dui ante, cons <br>
+                        non profit here.</p> 
+                    <img src="./img/socialmedia.svg">
+                </div>
+            </div>
         </div>
-        
+
     </div>
+    <footer>
+        <h1>Opening Hours</h1> 
+
+    </footer>
 </body>
 </html>
