добавила грид в раздел team, добавила контент и стили текста в footer

--- a/src/index.html
+++ b/src/index.html
@@ -86,12 +86,12 @@
         </div>
     </div>
     <div class="team container">
-        <h4>Dream Team</h4>
+        <h1>Dream Team</h1>
         <h5 class="subtitle">Meet our members</h5>
         <div class="members">
             <div class="member">
                 <img src="./img/member 1 .png" width="330" height="330">
-                <div>
+                <div class="member-description">
                     <h1>Ava Addamms</h1>
                     <h2>Designer</h2>
                     <p>Lorem ipsum dolor sit amet, <br>
@@ -103,7 +103,7 @@
             </div>
             <div class="member">
                 <img src="./img/member3.png" width="330" height="330">
-                <div>
+                <div class="member-description">
                     <h1>Ellen Marlen</h1>
                     <h2>Designer</h2>
                     <p>Lorem ipsum dolor sit amet, <br>
@@ -115,7 +115,7 @@
             </div>
             <div class="member member_reversed">
                 <img src="./img/member rebecca.png" width="330" height="330">
-                <div>
+                <div class="member-description">
                     <h1>Rebecca Le</h1>
                     <h2>Designer</h2>
                     <p>Lorem ipsum dolor sit amet, <br>
@@ -127,7 +127,7 @@
             </div>
             <div class="member member_reversed">
                 <img class="circle" src="./img/member4.png" width="330" height="330">
-                <div>
+                <div class="member-description">
                     <h1>Andy Shped</h1>
                     <h2>Drinker</h2>
                     <p>Lorem ipsum dolor sit amet, <br>
@@ -138,10 +138,32 @@
                 </div>
             </div>
         </div>
-
     </div>
-    <footer>
-        <h1>Opening Hours</h1> 
+    <footer class="footer">
+        <div class="footer-first">
+            <div class="container">
+                <h1>Opening Hours</h1>
+                <p>
+                    Monday / <span class="working-hours">9:00-20:00</span> <br>
+                    Tuesday / <span class="working-hours" >9:00-20:00</span> <br>
+                    Wednesday / <span class="working-hours">9:00-20:00</span> <br>
+                    Thursday / <span class="working-hours">9:00-20:00</span> <br>
+                    Friday / <span class="working-hours">9:00-20:00</span> <br>
+                    Saturday / <span class="working-hours">9:00-20:00</span> <br>
+                    Sunday /  <span class="working-hours">CLOSED</span>
+                </p>
+                <h1>Contact Info</h1>
+                <img src="./img/icons for contact1.svg">
+                <h1>Instagram Feed</h1>
+                <img src="./img/food1.png">
+                <img src="./img/food2.png">
+                <img src="./img/food3.png">
+                <img src="./img/food4.png">
+                <img src="./img/food5.png">
+                <img src="./img/food6.png">
+            </div>
+        </div>
+
 
     </footer>
 </body>
