задала блокам футера значение flex, сделала grid  для изображений внутри футера, скорректировала написание заголовков для  reversed элементов

--- a/src/index.html
+++ b/src/index.html
@@ -141,30 +141,36 @@
     </div>
     <footer class="footer">
         <div class="footer-first">
-            <div class="container">
-                <h1>Opening Hours</h1>
-                <p>
-                    Monday / <span class="working-hours">9:00-20:00</span> <br>
-                    Tuesday / <span class="working-hours" >9:00-20:00</span> <br>
-                    Wednesday / <span class="working-hours">9:00-20:00</span> <br>
-                    Thursday / <span class="working-hours">9:00-20:00</span> <br>
-                    Friday / <span class="working-hours">9:00-20:00</span> <br>
-                    Saturday / <span class="working-hours">9:00-20:00</span> <br>
-                    Sunday /  <span class="working-hours">CLOSED</span>
-                </p>
-                <h1>Contact Info</h1>
-                <img src="./img/icons for contact1.svg">
-                <h1>Instagram Feed</h1>
-                <img src="./img/food1.png">
-                <img src="./img/food2.png">
-                <img src="./img/food3.png">
-                <img src="./img/food4.png">
-                <img src="./img/food5.png">
-                <img src="./img/food6.png">
+            <div class="footer-content container">
+                <div>
+                    <h1>Opening Hours</h1>
+                    <p>
+                        Monday / <span class="working-hours">9:00-20:00</span> <br>
+                        Tuesday / <span class="working-hours" >9:00-20:00</span> <br>
+                        Wednesday / <span class="working-hours">9:00-20:00</span> <br>
+                        Thursday / <span class="working-hours">9:00-20:00</span> <br>
+                        Friday / <span class="working-hours">9:00-20:00</span> <br>
+                        Saturday / <span class="working-hours">9:00-20:00</span> <br>
+                        Sunday /  <span class="working-hours">CLOSED</span>
+                    </p>
+                </div>
+                <div>
+                    <h1>Contact Info</h1>
+                    <img src="./img/icons for contact1.svg">
+                </div>
+                <div>
+                    <h1>Instagram Feed</h1>
+                    <div class="food">
+                        <img src="./img/food1.png">
+                        <img src="./img/food2.png">
+                        <img src="./img/food3.png">
+                        <img src="./img/food4.png">
+                        <img src="./img/food5.png">
+                        <img src="./img/food6.png">    
+                    </div>
+                </div>
             </div>
         </div>
-
-
     </footer>
 </body>
 </html>
