--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
     <footer class="footer">
         <div class="footer-first">
             <div class="footer-content container">
-                <div>
+                <div class="footer-element">
                     <h1>Opening Hours</h1>
                     <p>
                         Monday / <span class="working-hours">9:00-20:00</span> <br>
@@ -154,11 +154,11 @@
                         Sunday /  <span class="working-hours">CLOSED</span>
                     </p>
                 </div>
-                <div>
+                <div class="footer-element">
                     <h1>Contact Info</h1>
                     <img src="./img/icons for contact1.svg">
                 </div>
-                <div>
+                <div class="footer-element">
                     <h1>Instagram Feed</h1>
                     <div class="food">
                         <img src="./img/food1.png">
@@ -169,6 +169,13 @@
                         <img src="./img/food6.png">    
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="footer-second">
+            <div class="copyrights container">
+                <span>Copyrights 2020. Ale Theme for WordPress
+                </span>
+                <img src="./img/social media.svg" alt="socialmedia">
             </div>
         </div>
     </footer>
