добавлен голубой квадрат в блоке member

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             </li>
         </ul>
     </header>
-    <div class="about-us"> 
+    <div class="about-us">
         <h1>About us</h1>
         <h2>Some facts about our activity</h2>
     </div>
@@ -125,6 +125,7 @@
                     non profit here.</p> 
                     <img src="./img/socialmedia.svg">
                 </div>
+                <div class="member__color"></div>
             </div>
             <div class="member">
                 <img src="./img/member3.png" width="330" height="330">
