добавила модификаторы для цвета и позиции цветового блока

--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
                     non profit here.</p> 
                     <img src="./img/socialmedia.svg">
                 </div>
-                <div class="member__color"></div>
+                <div class="member__color member__color_blue member__color_right"></div>
             </div>
             <div class="member">
                 <img src="./img/member3.png" width="330" height="330">
@@ -138,6 +138,7 @@
                         non profit here.</p> 
                     <img src="./img/socialmedia.svg">
                 </div>
+                <div class="member__color member__color_green member__color_right"></div>
             </div>
             <div class="member member_reversed">
                 <img src="./img/member rebecca.png" width="330" height="330">
@@ -150,6 +151,7 @@
                         non profit here.</p> 
                     <img src="./img/socialmedia.svg">
                 </div>
+                <div class="member__color member__color_green member__color_left"></div>
             </div>
             <div class="member member_reversed">
                 <img class="circle" src="./img/member4.png" width="330" height="330">
@@ -162,6 +164,7 @@
                         non profit here.</p> 
                     <img src="./img/socialmedia.svg">
                 </div>
+                <div class="member__color member__color_blue member__color_left"></div>
             </div>
         </div>
     </div>
